Comienzo del Proyecto B

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Titulo de la Pagina</h1>
+    <h1>Agregaremos el titulo de la Pagina</h1>
     
 </body>
 </html>
